--- a/ui/Connecting.resx
+++ b/ui/Connecting.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -120,36 +120,52 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAeCAYAAABNChwpAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADrwAAA68AZW8ckkAAAAadEVYdFNvZnR3YXJlAFBhaW50Lk5FVCB2My41LjExR/NC
-        NwAABTpJREFUWEe9V21MU1cYvv24/YBS+v3dUgpdqUirUBEV3IAN9IKAwNapfMlQ5hgKFEYcOAcSQUyn
-        sbC56KKMaRadHTLCFBGNoMAQ2ZyTTbKY+EN/7I/LNBoHnr2nxezvdLc+yckt533e8573816IlwWKoggm
-        k8kAkCvTMxXhpgg+bDP80gBDIBAQLIBcLg/d0dFVUX3y53sptZ4tICL9jAAiODgYe83JzHMuaPeO9Ned
-        vv2Uauu9Y0vLWwNirp8VAJjNZoLNZjN5PF5QRZPb2fzdzbv5R6ZRQtWBYbVOvxIoMlhsH5luGI1GX8hV
-        KpXY9emJ1irvzJPE/RNzMRtquyAiNqBIYJE4ND4FOqFUKgk4l21bHKur7Rr0Fh6bQfbWS48tmSW7ISJm
-        oAhBzhIKhX4FOiEWi7Fx8rVVmZbq46NjOV/8iqJ2DjyMTFlbBx1gBEowTkt0dLRfgU5AheMHmZ6/3l72
-        5fjNFXunkKay5y/DktQKuJQeZHyoBwa+JO0IDQ31ef7GW0WxuZ9d+d3WNIFU7/c8AOPvgVgHi8fn8wPT
-        8xKJxGc8ea3TntV5eQYbV1b2PTYso6ph32c8KCiI4Xa7/Qp0QiqV+gpuRRplzfAMT9ubJ5Bi68BsWLKz
-        CfYNQOFBsQXG88jISGyctXBRrIHaf34idtdVpKi6iMKo8oPQgSag8LlcLsPj8fgV6IRWq8VznalWq2VU
-        e2+fY/ckUlaNIH3+jjOQ6yigBMMlmJ2dnX4FOtHR0UGQJMmAgRKyuqnbE992DamrR5CmuHNaKpPHA0WI
-        jYPcr0A3oOIZ4Dwv3bX33YT2yVmD6zJSlZ+8r7XYckAsxWkJDw/3k/8rOGI5wYIBATcnoU95MCzASZIZ
-        H48d+hcwWvGDTF2/KWnZntH75vpRJK8YmAtLyt0O+2owTur1uOWfD6DH4KwpLF24oXvwULF3cmq1p8dt
-        Mr8iA09ZBgMuZoKw2+047yyzJUqX1Hrup4WN42D8EtLnNvTCZSOA8sK9zlq19cNX0703/kg8dRvVDN1F
-        G/vvoIS2U13QQkIOh8PEJFzRsEJSP+o+aNv5A1KBcVXJ0btKtWY5iEPwiM3OzsbU5wZbrdHoYgoqGxcf
-        vvpgObw81nlvI1vH9bkFJY0lIOeKRCLsGTdtc33uouaxJ0aoeFn5mbmwZZlVsC+HCLIdDgc+64WAPQyC
-        ZbDmldXFHLoxG7nvOopx/4jCG/pvQctpQEZarAvCEpoHb1nrryBp+QWky28ZhOjg0OMLwuMFAYVHMNgk
-        9pAPYYyw1B3tV8NQMbVMItueKeQo/Xgb5F76ZstXB5Y0Qei3XETy0m8e6szRFOiE4tD7Dvo/EKYVESwO
-        Fx8kNMYlUrqdw4/UDeNo6Z5rKKf97C8rV2WtLfh86qG19jKSlA0hXYarC8KuxVVP23sdv1TAUxKWzlRx
-        +LTig1EUvn0MpbZfe5rf2ncnfscYkoFxedHxPzV6YxKoCCAF9M75+QNDIhKpXFXtpb/llcPIVDOCLK4R
-        pNg0hMQbB5GOch0Bz3HPs+fnAn2Yr2QSLmIMKz82JoN8SzdfQJJ3ziNx8TkkLTjxSG8ypwBHgL92MZl2
-        zEdBbM7aVoOrXVLqNy4qPIs02bu+hxTh3LPj4uL8CnRj/pOJJ5XJYjRl3957Zlyy4eRjfezrBSDDwykw
-        3j8DeMiCh8L49r4uUfFZpMz95Det1VEI3qthn8QfIgEF/CuFPRREJa/L1mbUfw1RWQp/K2Fx8ecV5rwM
-        sGFIiWDQYMO42eEnm+F0On1CekAQ/wD0gHru2cQ05gAAAABJRU5ErkJggg==
+        R0lGODlhHwAfAPUAAP///xeVien089Xr6cHi37Xc2arX09/v7r7h3aPUz+bz8tvu7LHb16jX0rfd2tDp
+        5vb6+q/a1tfs6uj08kiroTmkml+2rcnm43zDvJvRzGW4sPr8/HW/uFaxqcvm5Pj7+1iyqkSpoAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH/C05FVFNDQVBFMi4wAwEAAAAh/hpDcmVhdGVkIHdpdGgg
+        YWpheGxvYWQuaW5mbwAh+QQJCgAAACwAAAAAHwAfAAAG/0CAcEgUDAgFA4BiwSQexKh0eEAkrldAZbvl
+        OD5TqYKALWu5XIwnPFwwymY0GsRgAxrwuJwbCi8aAHlYZ3sVdwtRCm8JgVgODwoQAAIXGRpojQwKRGSD
+        CRESYRsGHYZlBFR5AJt2a3kHQlZlERN2QxMRcAiTeaG2QxJ5RnAOv1EOcEdwUMZDD3BIcKzNq3BJcJLU
+        ABBwStrNBtjf3GUGBdLfCtadWMzUz6cDxN/IZQMCvdTBcAIAsli0jOHSJeSAqmlhNr0awo7RJ19TJORq
+        dAXVEEVZyjyKtE3Bg3oZE2iK8oeiKkFZGiCaggelSTiA2LhxiZLBSjZjBL2siNBOFQ84LxHA+mYEiRJz
+        BO7ZCQIAIfkECQoAAAAsAAAAAB8AHwAABv9AgHBIFAwIBQPAUCAMBMSodHhAJK5XAPaKOEynCsIWqx0n
+        CIrvcMEwZ90JxkINaMATZXfju9jf82YAIQxRCm14Ww4PChAAEAoPDlsAFRUgHkRiZAkREmoSEXiVlRgf
+        QgeBaXRpo6MOQlZbERN0Qx4drRUcAAJmnrVDBrkVDwNjr8BDGxq5Z2MPyUQZuRgFY6rRABe5FgZjjdm8
+        uRTh2d5b4NkQY0zX5QpjTc/lD2NOx+WSW0++2RJmUGJhmZVsQqgtCE6lqpXGjBchmt50+hQKEAEiht5g
+        UcTIESR9GhlgE9IH0BiTkxrMmWIHDkose9SwcQlHDsOIk9ygiVbl5JgMLuV4HUmypMkTOkEAACH5BAkK
+        AAAALAAAAAAfAB8AAAb/QIBwSBQMCAUDwFAgDATEqHR4QCSuVwD2ijhMpwrCFqsdJwiK73DBMGfdCcZC
+        DWjAE2V347vY3/NmdXNECm14Ww4PChAAEAoPDltlDGlDYmQJERJqEhGHWARUgZVqaWZeAFZbERN0QxOe
+        WwgAAmabrkMSZkZjDrhRkVtHYw+/RA9jSGOkxgpjSWOMxkIQY0rT0wbR2LQV3t4UBcvcF9/eFpdYxdgZ
+        5hUYA73YGxruCbVjt78G7hXFqlhY/fLQwR0HIQdGuUrTz5eQdIc0cfIEwByGD0MKvcGSaFGjR8GyeAPh
+        IUofQGNQSgrB4IsdOCqx7FHDBiYcOQshYjKDxliVDpRjunCjdSTJkiZP6AQBACH5BAkKAAAALAAAAAAf
+        AB8AAAb/QIBwSBQMCAUDwFAgDATEqHR4QCSuVwD2ijhMpwrCFqsdJwiK73DBMGfdCcZCDWjAE2V347vY
+        3/NmdXNECm14Ww4PChAAEAoPDltlDGlDYmQJERJqEhGHWARUgZVqaWZeAFZbERN0QxOeWwgAAmabrkMS
+        ZkZjDrhRkVtHYw+/RA9jSGOkxgpjSWOMxkIQY0rT0wbR2I3WBcvczltNxNzIW0693MFYT7bTumNQqlis
+        v7BjswAHo64egFdQAbj0RtOXDQY6VAAUakihN1gSLaJ1IYOGChgXXqEUpQ9ASRlDYhT0xQ4cACJDhqDD
+        5mRKjCAYuArjBmVKDP9+VRljMyMHDwcfuBlBooSCBQwJiqkJAgAh+QQJCgAAACwAAAAAHwAfAAAG/0CA
+        cEgUDAgFA8BQIAwExKh0eEAkrlcA9oo4TKcKwharHScIiu9wwTBn3QnGQg1owBNld+O72N/zZnVzRApt
+        eFsODwoQABAKDw5bZQxpQ2JkCRESahIRh1gEVIGVamlmXgBWWxETdEMTnlsIAAJmm65DEmZGYw64UZFb
+        R2MPv0QPY0hjpMYKY0ljjMZCEGNK09MG0diN1gXL3M5bTcTcyFtOvdzBWE+207pjUKpYrL+wY7MAB4Ee
+        rqZjUAG4lKVCBwMbvnT6dCXUkEIFK0jUkOECFEeQJF2hFKUPAIkgQwIaI+hLiJAoR27Zo4YBCJQgVW4c
+        pMYDBpgVZKL59cEBhw+U+QROQ4bBAoUlTZ7QCQIAIfkECQoAAAAsAAAAAB8AHwAABv9AgHBIFAwIBQPA
+        UCAMBMSodHhAJK5XAPaKOEynCsIWqx0nCIrvcMEwZ90JxkINaMATZXfju9jf82Z1c0QKbXhbDg8KEAAQ
+        Cg8OW2UMaUNiZAkREmoSEYdYBFSBlWppZl4AVlsRE3RDE55bCAACZpuuQxJmRmMOuFGRW0djD79ED2NI
+        Y6TGCmNJY4zGQhBjStPTFBXb21DY1VsGFtzbF9gAzlsFGOQVGefIW2LtGhvYwVgDD+0V17+6Y6BwaNfB
+        wy9YY2YBcMAPnStTY1B9YMdNiyZOngCFGuIBxDZAiRY1eoTvE6UoDEIAGrNSUoNBUuzAaYlljxo2M+HI
+        eXiJpRsRNMaq+JSFCpsRJEqYOPH2JQgAIfkECQoAAAAsAAAAAB8AHwAABv9AgHBIFAwIBQPAUCAMBMSo
+        dHhAJK5XAPaKOEynCsIWqx0nCIrvcMEwZ90JxkINaMATZXfjywjlzX9jdXNEHiAVFX8ODwoQABAKDw5b
+        ZQxpQh8YiIhaERJqEhF4WwRDDpubAJdqaWZeAByoFR0edEMTolsIAA+yFUq2QxJmAgmyGhvBRJNbA5qo
+        GcpED2MEFrIX0kMKYwUUslDaj2PA4soGY47iEOQFY6vS3FtNYw/m1KQDYw7mzFhPZj5JGzYGipUtESYo
+        wzVmF4ADgOCBCZTgFQAxZBJ4AiXqT6ltbUZhWdToUSR/Ii1FWbDnDkUyDQhJsQPn5ZU9atjUhCPHVhgT
+        Ny/RSKsiqKFFbUaQKGHiJNyXIAAh+QQJCgAAACwAAAAAHwAfAAAG/0CAcEh8JDAWCsBQIAwExKhU+HFw
+        KlgsIMHlIg7TqQeTLW+7XYIiPGSAymY0mrFgA0LwuLzbCC/6eVlnewkADXVECgxcAGUaGRdQEAoPDmhn
+        DGtDBJcVHQYbYRIRhWgEQwd7AB52AGt7YAAIchETrUITpGgIAAJ7ErdDEnsCA3IOwUSWaAOcaA/JQ0am
+        BXKa0QpyBQZyENFCEHIG39HcaN7f4WhM1uTZaE1y0N/TacZoyN/LXU+/0cNyoMxCUytYLjm8AKSS46rV
+        KzmxADhjlCACMFGkBiU4NUQRxS4OHijwNqnSJS6ZovzRyJAQo0NhGrgs5bIPmwWLCLHsQsfhxBWTe9Qk
+        OzCwC8sv5Ho127akyRM7QQAAOwAAAAAAAAAAAA==
 </value>
   </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>34</value>
-  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAkAICAQAAEABADoAgAAlgAAABAQEAABAAQAKAEAAH4DAAAwMAAAAQAIAKgOAACmBAAAICAAAAEA
