--- a/ui/UI.resx
+++ b/ui/UI.resx
@@ -117,6 +117,114 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADo
+        BQAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEGYAAyIBMgMmATgDGQEj7AADBQEHAxUBHQFHAkgBgAFJAUoBSQGDAzABTOgA
+        AwQBBQMWAR4DOAFcAWABcAFoAcUBXwFuAWUBwQNDAXYDBgEIAwEBAqwAAwcBCgFIAUoBSAGEAysBQigA
+        Aw0BEgMxAU0BYAFxAWgBxgFoAYcBdgHaAWkBgQFyAdQBUgFVAVQBnQMXASADBgEIqAADBQEHAUsBUQFM
+        AZUBYAHnAWsB/wFjAaIBaAHhAyYBOCAAAwgBCwMxAU0BVAFYAVYBoAFsAZIBfQHjAWgBggFyAdYBaQGB
+        AXIB1AFdAWkBYgG6Az0BZwMTARqkAAMCAQMBSQFOAUoBkAFFAdsBUQH/AXQB/AGEAf8BXQH4AWsB/wFR
+        AZoBVgHgAyUBNxgAAwQBBQMqAUEBTgFQAU8BkwFkAXwBcAHSAWQBfAFwAdIBYAFsAWQBvwFjAXQBaQHJ
+        AWQBdgFrAcwBVgFbAVgBpwMoAT0DCgENnAADCAELAUkBTAFJAYwBPQHEAUgB/wGFAeoBjwH/AYwB5gGT
+        Af8BdwHqAYUB/wFLAekBWgH/AUkBgwFNAdkDIQEwFAADHQEqAUwCTQGNAWUBegFuAc8BagGGAXYB2wFQ
+        AVQBUQGZAUkBSgFJAYMBVgFbAVgBpwFnAX4BbwHTAWgBggFyAdYDQAFuAxsBJpwAAzYBWQF4AccBggH/
+        AaIB4QGoAf8BhgHXAY0B/wFPAVoBTwGlAV0BhwFhAdcBbAHeAXcB/wE3AdMBRQH/AUYBdgFKAdYDHwEs
+        EAABTQFPAU4BjgFoAYkBdwHeAXEBngGCAesBWwFkAV8BtgMoAT0DDwEUATsBPAE7AWUBZgF6AW4BzgFw
+        AZ8BggHsAVcBXgFbAasDMAFLnAADFgEfAVgBZgFZAbsBnQHUAaMB/wFMAVIBTAGUAwEBAgMkATYBVwGR
+        AVsB4QFdAc8BZwH/AR8BvwEuAf8BQwFrAUUB1QMeASsMAAFJAUoBSQGEAWkBjQF3Ad8BXwFtAWQBwAM8
+        AWYDCwEPAwQBBQMjATMBSQJKAYUBbgGXAX8B5wFnAYQBcwHYAUsBTQFLAYkDIAEvnAADFQEdAz0BaQMG
+        AQgIAAMpAT4BVgGNAVgB5QFUAbsBXgH/AQcBogEVAf8BSAFmAUkB0QMgAS8IAAMuAUcBTQFPAU4BjgFB
+        AkIBcgMfAS0IAAMNAREDLAFDAVUBWgFXAaUBaQGNAXcB3wFfAW0BZAHAAUABQQFAAW8DDQERAwMBBKwA
+        ASsBLAErAUMBVQGOAVwB6gFUAaMBWgH/ARgBhgEgAf8BPQI+AWsIAAMHAQoDIAEuAxoBJQMIAQsMAAMO
+        ARMDMAFMAV0BZwFhAbgBaAGHAXYB2gFbAWIBXgGyAyoBQAMNAREDAAEBrAADLwFJAVoBjQFhAekBTAFQ
+        AU0BlwMKAQ0nAAQBAQIDOAFcAV8BawFjAb0BbQGXAX8B5wFSAVUBVAGdAx8BLQMDAQSwAAMdASkDBwEK
+        LwABAQMSARgDOgFhAVsBYwFeAbMBbQGXAX8B5wFGAUcBRgF9Ax8BLesAAQEDGAEhAzoBYAFfAWsBYwG9
+        AV4BaQFiAbsBRAFFAUQBeAMcASjsAAMRARcDOAFcAV0BaQFhAbwBVwFdAVkBqQM2AVj0AAM1AVUBSQFK
+        AUkBgwFAAUEBQAFvgAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAv8B+AH/
+        BAAC/wHgAf8EAAL/AcABPwQAAfgB/wHAAT8EAAHwAX8BgAE/BAAB4AE/AQABHwQAAcABHwEAAR8EAAHA
+        AQ8BAAEfBAABwAEHAQABDwQAAeMBAwEMAQMEAAH/AYMBDgEBBAAB/wHDAf4BAQQAAf8B5wH/AQEEAAP/
+        AYAEAAP/AeAEAAP/AfgEAAs=
+</value>
+  </data>
+  <metadata name="imgListDLIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
+  <data name="imgListDLIcon.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADS
+        AgAAAk1TRnQBSQFMAwEBAAEoAQABKAEAAQwBAAEMAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABMAMA
+        AQwDAAEBAQABIAYAAQnSAAMwAUwDcAH/A3AB/wNwAf8DcAH/A3AB/wNwAf8DcAH/A3AB/wNwAf8DcAH/
+        AzABTJAAA3AB/wPnAf8D5wH/A+cB/wPnAf8D5wH/A+cB/wPnAf8D5wH/A+cB/wPnAf8DcAH/kAADcAH/
+        A+cB/wGOAYkBjBn/AY4BiQGMAf8D5wH/A3AB/5AAA3AB/wPnAf8BjgGJAYwF/wFAAY8BXgH/AUABjwFe
+        Af8BQAGPAV4B/wFAAY8BXgX/AY0BiQGLAf8D5wH/A3AB/5AAA3AB/wPnAf8DyQX/AUABjwFeAf8BVQHX
+        AZkB/wFpAf0BtgH/AUABjwFeBf8DyQH/A+cB/wNwAf+QAANwAf8D5wH/AdkB4wHcBf8BQAGPAV4B/wFV
+        AdcBmQH/AWkB/QG2Af8BQAGPAV4F/wHZAeMB3AH/A+cB/wNwAf+QAANwAf8DcAH/A8kF/wFAAY8BXgH/
+        AVMB3gGcAf8BaQH9AbYB/wFAAY8BXgX/A8kB/wNwAf8DcAH/lAADcAH/AUABjwFeAf8BQAGPAV4B/wFA
+        AY8BXgH/AVUB1wGZAf8BaQH9AbYB/wFAAY8BXgH/AUABjwFeAf8BQAGPAV4B/wNwAf+cAAMNAREBQAGP
+        AV4B/wFUAdQBlwH/AVUB1wGZAf8BaQH9AbYB/wFpAf0BtgH/AUABjwFeAf8DDQERpAADDgETAUABjwFe
+        Af8BaQH9AbYB/wFpAf0BtgH/AUABjwFeAf8DDgETrAADDwEUAUABjwFeAf8BQAGPAV4B/wMPARSgAAFC
+        AU0BPgcAAT4DAAEoAwABMAMAAQwDAAEBAQABAQUAAWAXAAP/AQAB/wHwPgABgAEQBgABwAEwBgAB4AFw
+        BgAC8AYACw==
+</value>
+  </data>
+  <metadata name="imgListArrow.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>237, 17</value>
+  </metadata>
+  <data name="imgListArrow.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC6
+        AgAAAk1TRnQBSQFMAwEBAAEYAQABGAEAAQwBAAEKAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABMAMA
+        AQoDAAEBAQABIAUAAYABByoAAXABywGuAf+4AAFWAc8BrAH/ATgB1AGqAf8BeAHSAbYB/7AAAV8B0QGv
+        Af8BMQHVAaoB/wEQAcwBmwH/ATMB0gGnAf8BdgHOAbQB/6gAAWUB0AGxAf8BQAHXAa8B/wEhAdABogH/
+        ARcBzgGdAf8BFAHOAZwB/wEzAdQBqAH/AYYB0gG6Af+gAAGaAdsBxgH/AXoB5gHJAf8BNQHVAaoB/wEq
+        AdIBpQH/ASAB0AGhAf8BFgHOAZ0B/wESAc0BmwH/AUIB1AGsAf8BkgHXAcEB/5gAAZQB0QG7Af8BngHd
+        AckB/wGVAdwBxgH/AXIB4QHEAf8BNwHVAasB/wEqAdIBpQH/ASEB0AGiAf8BOwHWAa0B/wFQAccBowH/
+        AVYByAGlAf+gAAGJAcwBtAH/AZsB6gHUAf8BaAHfAcAB/wEyAdQBqQH/ASoB0gGlAf8BSAHZAbIB/wGQ
+        AcIBsAH/pAABlAHOAboB/wGrAe4B3AH/AZMB6AHRAf8BYQHfAb0B/wEzAdQBqAH/AU4B3AG1Af8BogHK
+        AbsB/6QAAZcB0QG8Af8BvgHvAeEB/wGrAesB2QH/AZoB5wHRAf8BcAHfAcAB/wFdAdsBuQH/AaYB0AHA
+        Af+kAAGPAcsBswH/AZQBzgG6Af8BkAHNAbcB/wGMAc0BtQH/AYkBzAG0Af8BeQHKAa8B/wG3AdwBzQH/
+        mAABQgFNAT4HAAE+AwABKAMAATADAAEKAwABAQEAAQEFAAFQFwAD/wEAAf0B8AYAAfgB8AYAAfABcAYA
+        AeABMAYAAcABEAYAAYABEAYAAeABMAYAAeABMAYAAeABMAYAAeABMAYACw==
+</value>
+  </data>
+  <metadata name="imgListNew.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>347, 17</value>
+  </metadata>
+  <data name="imgListNew.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADI
+        AwAAAk1TRnQBSQFMAwEBAAEYAQABGAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARD/AP8A/wD/ABYAAZ0B2QGoAf8BVAG9AWMB/wGdAdkBqAH/AVQBvQFjAf8BVwG+
+        AWcB/wFUAb0BZAH/AVQBvQFjAf8BVAG9AWMB/wFUAb0BZQH/AVQBvQFjAf8BUwG9AWMB/wFUAb0BYwH/
+        AVQBvQFjAf8BVAG9AWMB/wFUAb0BYwH/AZ4B2QGoAf/AAAFUAb0BYwX/AVQBvQFjAf8BWQHAAWcB/wH8
+        Af4B/AH/AU8BvAFfCf8B/gH/Af4B/wFOAbwBXRX/AVQBvQFjAf/AAAFUAb0BYwX/AVQBvQFjAf8BTQG8
+        AV4B/wH8Af4B/AH/AUwBuwFcAf8B/gH/Af4B/wFUAb0BZAH/AVIBvQFhAf8BUQG9AWEB/wP+Af8BVAG9
+        AWQB/wP+Af8BVAG9AWMF/wFUAb0BYwH/wAABUwG9AWMF/wFUAb0BYwX/AfwB/gH8Af8BTgG8AV0B/wH5
+        Af0B+QH/AVQBvgFkAf8BVAG9AWMB/wFYAb8BZwH/Af0B/gH9Af8BVAG9AWMB/wH9Af4B/QH/AVQBvQFj
+        Bf8BUwG9AWMB/8AAAVQBvQFjDf8B/QH+Af0B/wFSAb0BYQn/Af4B/wH+Af8BWAG/AWYB/wH8Af4B/AH/
+        AVQBvQFjAf8D/gH/AVQBvQFjBf8BUwG9AWMB/8AAAVQBvQFjBf8B/AH+AfwB/wFYAb8BZgX/AVEBvQFg
+        Af8B/gH/Af4B/wFTAb0BYwH/AVQBvQFjAf8BWAG/AWYB/wH+Af8B/gH/AVQBvQFjAf8B/QH+Af0B/wFU
+        Ab0BYwX/AVQBvQFkAf/AAAFUAb0BYwX/AUwBuwFdAf8BTwG8AV4F/wFNAbsBXQn/Af4B/wH+Af8BVwG/
+        AWYB/wP+Af8BUwG9AWMB/wFXAb8BZgH/AVMBvQFjBf8BUwG9AWMB/8AAAZ0B2QGoAf8BVAG9AWMB/wFT
+        Ab0BYwH/AVQBvQFjAf8BUwG9AWMB/wFTAb0BYwH/AVQBvQFjAf8BUwG9AWMB/wFUAb0BZAH/AVMBvQFj
+        Af8BVAG+AWUB/wGdAdgBpwH/AVQBvQFjAf8BnQHZAagB/wFUAb0BYwH/AZ0B2AGnAf//AP8A/wD/AMQA
+        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAL/BgAC/wYAAv8GAAL/RgAC/wYA
+        Av8GAAL/BgAC/wYACw==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>34</value>
   </metadata>
