--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -163,6 +163,9 @@
   <data name="sheep_launcher" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\images\sheep_launcher.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sheep_launcher_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\assets\images\sheep_launcher_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tick_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\images\tick-blue.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
